--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@
 html, body {
   width: 100%;
   min-height: 100vh;
+  font-size: 0.9rem;
 }
 
 body {
@@ -23,42 +24,35 @@ body {
   flex-flow: column nowrap;
   justify-content: center;
   align-items: center;
-  font-family: var(--league-spartan)
+  font-family: var(--league-spartan);
+  font-size: clamp(1rem, 1vw, 2.5rem);
+  background: url('images/bg-pattern-top-mobile.svg') left top no-repeat,
+    url('images/bg-pattern-bottom-mobile.svg') bottom right no-repeat;
 }
 
 .container {
-  max-width: 90%;
+  width: 90%;
   display: flex;
   flex-flow: column nowrap;
   gap: 3rem;
-  margin: 10% 0;
+  margin: 2rem 0;
 }
 
 .product-rating {
-  background-image: url("images/bg-pattern-top-mobile.svg");
-  background-repeat: no-repeat;
   text-align: center;
-}
-
-.product-reviews {
-  background-image: url("images/bg-pattern-bottom-mobile.svg");
-  background-repeat: no-repeat;
 }
 
 .product-heading {
   color: var(--primery-magenta);
-  font-size: 3em;
-  line-height: 0.8;
+  font-size: clamp(3em, 3vw, 7em);
 }
 
 .description {
   margin: 5% 0;
-  line-height: 1.3;
-  font-size: 1.1em;
   color: var(--dgray-magenta);
 }
 
-.rating-stars {
+.stars {
   background-color: var(--lgray-magenta);
   border-radius: 10px;
   padding: 1rem;
@@ -66,7 +60,7 @@ body {
 }
 
 .rating {
-  margin: 5% 0 0 0;
+  margin: 0.5rem 0 0 0;
   color: var(--primery-magenta);
   font-weight: 700;
 }
@@ -77,17 +71,22 @@ body {
   color: var(--white);
   padding: 2.5rem;
   margin: 1rem 0;
+  line-height: 1.1;
 }
 
 .profile {
   display: flex;
   align-items: center;
-  gap: 1.3rem;
+  gap: 15px;
+}
+
+.profile h2 {
+  font-size: inherit;
 }
 
 .profile img {
   border-radius: 50%;
-  width: 3rem;
+  width: 2.5rem;
 }
 
 .buyer-position {
@@ -96,6 +95,55 @@ body {
 }
 
 .buyer-review {
-  line-height: 1.5;
   margin: 1rem 0 0 0;
 }
+
+@media screen and (min-width:35em) {
+  .body {
+    background: url("images/bg-pattern-top-desktop.svg"), url("images/bg-pattern-bottom-desktop.svg");
+  }
+
+  .container {
+
+  }
+
+}
+
+
+/* @media screen and (min-width:) {
+  .container {
+    width: 65%;
+  }
+
+  .product-rating {
+    display: flex;
+    text-align: start;
+  }
+
+  .headings, .stars-ratings {
+    flex: 1 1 auto;
+    width: 50%;
+  }
+
+  .headings {
+    padding: 0 15% 0 0;
+  }
+
+  .product-reviews {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2rem;
+  }
+
+  .colton-smith {
+
+  }
+
+  .irene-roberts {
+
+  }
+
+  .anne-wallace {
+
+  }
+} */
